- Wonder Scale Merchant                     -
---------------------------------------------

- v1.0.1000                                 -
---------------------------------------------
- 2020-05-25                                -
---------------------------------------------
.: WSM: Task: Remove tel required from registration (WSM-2)
.: WSM: BugFix: Open url in correct domain (WSM-74)

---------------------------------------------
- 2020-05-23                                -
---------------------------------------------
.: WSM: Task: Update link folder with Wonder Scale Website (WSM-54)
.: WSM: Task: Disabled to upload customize image in QR code (WSM-20)

---------------------------------------------
- 2020-05-20                                -
---------------------------------------------
.: WSM: Task: Profile Image Upload (WSM-38)

---------------------------------------------
- 2020-05-03                                -
---------------------------------------------
.: WSM: Story: User Control (WSM-25)
.: WSM: Task: Update icon in server (WSM-17)

---------------------------------------------
- 2020-05-01                                -
---------------------------------------------
.: WSM: Task: Home Page (WSM-4)
.: WSM: Story: QR code Module (WSM-20)

---------------------------------------------
- 2020-04-26                                -
---------------------------------------------
.: WSM: Task: Smaller error font size (WSM-19)
.: WSM: Task: Without login after account activation (WSM-18)
.: WSM: Task: Set a delay to all loading (WSM-36)

---------------------------------------------
- 2020-04-25                                -
---------------------------------------------
.: WSM: Story: Shop Settings Module (WSM-23)
.: WSM: Story: Currency Module (WSM-34)
.: WSM: Task: Change Icon (WSM-17)

---------------------------------------------
- 2020-04-24                                -
---------------------------------------------